# garmin-tracker

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml
.github/instructions/: python-docstrings.instructions.md
.github/skills/: garmin-api-integration.md
backend/: .env.example  README.md  garmin_tracker.db  requirements.txt  seed_demo.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/models/: __init__.py  workout.py
backend/app/services/: __init__.py  body_composition_service.py  garmin_service.py  google_tasks_service.py  training_plan_service.py
frontend/: .env.example  README.md  requirements.txt  streamlit_app.py
frontend-react/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend-react/src/: App.tsx  index.css  main.tsx
frontend-react/src/api/: bodyComposition.ts  google.ts  races.ts  schedule.ts  settings.ts  sleep.ts  stats.ts
frontend-react/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend-react/src/components/races/: RaceCountdown.tsx  RaceManager.tsx
frontend-react/src/components/ui/: Button.tsx  Card.tsx  DatePicker.tsx  Modal.tsx
frontend-react/src/components/workouts/: PlanWorkoutModal.tsx  RunningStatsPanel.tsx  TrainingPlanPanel.tsx  WeekStrip.tsx  WeeklyStatsBar.tsx  WorkoutCard.tsx  WorkoutDetailModal.tsx  (+1 more)
frontend-react/src/hooks/: useRaces.ts
frontend-react/src/pages/: CalendarPage.tsx  CyclePage.tsx  HealthPage.tsx  SettingsPage.tsx
frontend-react/src/types/: index.ts
