[project]
name = "garmin-tracking-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "garminconnect (>=0.3.5,<0.4.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
